--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
@@ -21,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server-start" : "json-server --watch db.json --port 4000"
+    "server-start": "json-server --watch db.json --port 4000"
   },
   "eslintConfig": {
     "extends": [
